added load categories on start

--- a/quizApp/src/index.html
+++ b/quizApp/src/index.html
@@ -7,5 +7,23 @@
     <title>Webpack Starter Kit</title>
   </head>
 
-  <body></body>
+  <body>
+    <div class="container">
+      <form method="get" id="searchQuestions">
+        <select name="category"></select>
+        <select name="difficulty">
+          <option value="">all difficulty</option>
+          <option value="easy">easy</option>
+          <option value="normal">normal</option>
+          <option value="hard">hard</option>
+        </select>
+        <select name="type">
+          <option value="">any type</option>
+          <option value="multiple">multiple</option>
+          <option value="boolean">true/false</option>
+        </select>
+        <button type="submit">start!</button>
+      </form>
+    </div>
+  </body>
 </html>
