added rendering and switching questions

--- a/quizApp/src/index.html
+++ b/quizApp/src/index.html
@@ -9,20 +9,20 @@
 
   <body>
     <div class="container">
-      <form method="get" id="searchQuestions">
-        <select name="category"></select>
-        <select name="difficulty">
+      <form method="get" id="searchQuestions" class="serch-form">
+        <select class="serch-form__category" name="category"></select>
+        <select name="difficulty" class="serch-form__difficulty">
           <option value="">all difficulty</option>
           <option value="easy">easy</option>
-          <option value="normal">normal</option>
+          <option value="medium">normal</option>
           <option value="hard">hard</option>
         </select>
-        <select name="type">
+        <select name="type" class="serch-form__type">
           <option value="">any type</option>
           <option value="multiple">multiple</option>
           <option value="boolean">true/false</option>
         </select>
-        <button type="submit">start!</button>
+        <button type="submit" class="serch-form__submit">start!</button>
       </form>
     </div>
   </body>
