finish based functionality, added rendering start page after end of testing

--- a/quizApp/src/index.html
+++ b/quizApp/src/index.html
@@ -8,22 +8,6 @@
   </head>
 
   <body>
-    <div class="container">
-      <form method="get" id="searchQuestions" class="serch-form">
-        <select class="serch-form__category" name="category"></select>
-        <select name="difficulty" class="serch-form__difficulty">
-          <option value="">all difficulty</option>
-          <option value="easy">easy</option>
-          <option value="medium">normal</option>
-          <option value="hard">hard</option>
-        </select>
-        <select name="type" class="serch-form__type">
-          <option value="">any type</option>
-          <option value="multiple">multiple</option>
-          <option value="boolean">true/false</option>
-        </select>
-        <button type="submit" class="serch-form__submit">start!</button>
-      </form>
-    </div>
+    <div class="container"></div>
   </body>
 </html>
