added showing correct answers, fixed some bugs, added ReadMe

--- a/quizApp/src/index.html
+++ b/quizApp/src/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap"
       rel="stylesheet"
     />
-    <title>Webpack Starter Kit</title>
+    <title>QuizApp</title>
   </head>
 
   <body>
